another install css changes

--- a/install/css/main.css
+++ b/install/css/main.css
@@ -202,18 +202,18 @@ header nav a:active {
 
 header nav .active, #main .right .side_left .box li .button:hover, #main .right .side_right .box .button:hover, input[type="submit"]:hover, .nice_button:hover {
 	border:1px solid #3a8fc0;
-	background-color:#1d6d9c;
-	background-image: linear-gradient(bottom, #1D6D9C 0%, #3D92C4 100%);
-	background-image: -o-linear-gradient(bottom, #1D6D9C 0%, #3D92C4 100%);
-	background-image: -moz-linear-gradient(bottom, #1D6D9C 0%, #3D92C4 100%);
-	background-image: -webkit-linear-gradient(bottom, #1D6D9C 0%, #3D92C4 100%);
-	background-image: -ms-linear-gradient(bottom, #1D6D9C 0%, #3D92C4 100%);
+	background-color:#247011;
+	background-image: linear-gradient(bottom, #247011 0%, #9BDB69 100%);
+	background-image: -o-linear-gradient(bottom, #247011 0%, #9BDB69 100%);
+	background-image: -moz-linear-gradient(bottom, #247011 0%, #9BDB69 100%);
+	background-image: -webkit-linear-gradient(bottom, #247011 0%, #9BDB69 100%);
+	background-image: -ms-linear-gradient(bottom, #247011 0%, #9BDB69 100%);
 	background-image: -webkit-gradient(
 		linear,
 		left bottom,
 		left top,
-		color-stop(0, #1D6D9C),
-		color-stop(1, #3D92C4)
+		color-stop(0, #247011),
+		color-stop(1, #9BDB69)
 	);
 	cursor: pointer;
 }
@@ -636,7 +636,7 @@ header nav .active:hover {
 }
 
 #main .right .side_left .box li a, #main .right .side_right .box a  {
-	color:#1D6D9C;
+	color:#247011;
 	text-decoration:none;
 }
 
@@ -1251,7 +1251,7 @@ margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
 
 #main .right .box li a, #main .right .side_right .box a  {
-	color:#1D6D9C;
+	color:#247011;
 	text-decoration:none;
 }
 
